--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
         <h1>De Rhombicosidocecahedrone Tafel</h1>
         <img src="cookies.jpg" width="500px" alt="Cookie Image" id="cookie-image">
-        <p>De Rhombicosidocecahedrone Tafel (niet te verwarren met de Rhombicosido<u>d</u>ecahedrone tafel) bestaat uit de volgende leden:</p>
+        <p>De Rhombicosidocecahedrone Tafel van de Soos (niet te verwarren met de Rhombicosido<u>d</u>ecahedrone Tafel van de Soos) bestaat uit de volgende leden:</p>
         <ul>
             <li>
                Florian 
