--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <h1>De Rhombicosidocecahedrone Tafel</h1>
+        <h1>De Rhombicosidocecahedrone Tafel van de Soos</h1>
         <img src="cookies.jpg" width="500px" alt="Cookie Image" id="cookie-image">
         <p>De Rhombicosidocecahedrone Tafel van de Soos (niet te verwarren met de Rhombicosido<u>d</u>ecahedrone Tafel van de Soos) bestaat uit de volgende leden:</p>
         <ul>
