--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
         <h1>De Rhombicosidocecahedrone Tafel van de Soos</h1>
         <img src="cookies.jpg" width="500px" alt="Cookie Image" id="cookie-image">
         <p>Welkom op de website van de Rhombicosidocecahedrone Tafel van de Soos! (niet te verwarren met de Rhombicosido<u>d</u>ecahedrone Tafel van de Soos)</p>
 
-        <p>De Rhombicosidocecahedrone Tafel van de Soos is opgericht in 2022. Na vele jaren hebben we eindelijk een website!</p>
+        <p>De Rhombicosidocecahedrone Tafel van de Soos is opgericht in 2022. De naam is een woordspeling op een dodecahedron-vormige cake. Na vele jaren hebben we eindelijk een website!</p>
 
         <p>De Rhombicosidocecahedrone Tafel van de Soos (niet te verwarren met de Rhombicosido<u>d</u>ecahedrone Tafel van de Soos) bestaat uit de volgende leden:</p>
         <ul>
@@ -28,5 +29,6 @@
                 Jochem 
             </li>
         </ul>
+    </main>
 </body>
 </html>
